--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stefanny</title>
+    <title>teste com imagem</title>
 </head>
 <body>
+    <h1>testando carga com imagens
+        <p>abaixo voce vai ver uma imagem que esta na pasta.</p>
+    <img src="veiga.webp" alt="palmeiras">
     
 </body>
 </html>
